Erro ao trocar a cidade fixed. Erro com chaves pix fixed. Adicionei também uma máscara no input de valor.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="main-content">
         <h1 id="h1-pix">Gerar QR Code PIX</h1>
         <div id="qr-code-content">
-            <input type="number" id="pix_value" placeholder="Digite o valor" required>
+            <input type="text" id="pix_value" placeholder="Digite o valor" value="R$ " required>
             <button id="generate_qr_code_button">Gerar QR Code</button>
         </div>
         
@@ -17,7 +17,7 @@
         
         <button id="copy_payload_button">Copiar Pix</button>
         <div id="copy_success_message" style="display: none; color: green;">Copiado com sucesso</div>   
-    </div>    
+    </div> 
     <script src="src/main.js"></script>
 </body>
 </html>
